--- a/.github/workflows/send-to-discord.yml
+++ b/.github/workflows/send-to-discord.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install requests faker
+        pip install requests faker apprise
 
     - name: Run script
       run: |
