--- a/.github/workflows/send-to-discord.yml
+++ b/.github/workflows/send-to-discord.yml
@@ -18,8 +18,8 @@ jobs:
     runs-on: ubuntu-latest
     env:
       COUNTRY: ${{ inputs.country }}
-      DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
-
+      # CORRECTED: Use secrets directly without env declaration
+      
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
@@ -34,5 +34,8 @@ jobs:
         pip install requests faker apprise
 
     - name: Generate accounts
+      env:
+        # SECURITY: Pass webhook as environment variable
+        DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
       run: |
         python account_generator.py $COUNTRY
